Split results folder into two

--- a/subproject/test/CMakeLists.txt
+++ b/subproject/test/CMakeLists.txt
@@ -46,11 +46,10 @@ function(add_test)
   _add_test(NAME ${test_name} COMMAND ${target})
 endfunction()
 
-add_test(NAMESPACE verify NAME verify_compressed_cache)
-add_test(NAMESPACE verify NAME verify_fast_multiplication)
-add_test(NAMESPACE verify NAME verify_log_computation)
-add_test(NAMESPACE verify NAME verify_magic_division)
-
 add_test(NAME compute_required_cache_length)
 add_test(NAME test_all_shorter_interval_cases TO_CHARS RYU)
 add_test(NAME uniform_random_test TO_CHARS RYU)
+add_test(NAME verify_compressed_cache)
+add_test(NAME verify_fast_multiplication)
+add_test(NAME verify_log_computation)
+add_test(NAME verify_magic_division)
