--- a/subproject/meta/CMakeLists.txt
+++ b/subproject/meta/CMakeLists.txt
@@ -3,9 +3,14 @@ cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 project(dragonbox_meta LANGUAGES CXX)
 
 include(FetchContent)
-FetchContent_Declare(dragonbox SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../..")
-FetchContent_Declare(common SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../common")
-FetchContent_MakeAvailable(dragonbox common)
+if (NOT TARGET dragonbox)
+    FetchContent_Declare(dragonbox SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../..")
+    FetchContent_MakeAvailable(dragonbox)
+endif()
+if (NOT TARGET common)
+    FetchContent_Declare(common SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../common")
+    FetchContent_MakeAvailable(common)
+endif()
 
 function(meta_exe NAME)
   add_executable(${NAME} source/${NAME}.cpp)
@@ -13,6 +18,19 @@ function(meta_exe NAME)
   target_compile_features(${NAME} PRIVATE cxx_std_17)
 
   target_link_libraries(${NAME} PRIVATE ${ARGN})
+
+  # ---- MSVC Specifics ----
+  if (MSVC)
+      # No need to not generate PDB
+      # /permissive- should be the default
+      # The compilation will fail without /experimental:newLambdaProcessor
+      # See also https://gitlab.kitware.com/cmake/cmake/-/issues/16478
+      target_compile_options(${NAME} PUBLIC
+              /Zi /permissive- $<$<NOT:$<CXX_COMPILER_ID:Clang>>:/experimental:newLambdaProcessor>)
+      target_link_options(${NAME} PUBLIC /DEBUG:FASTLINK)
+      set_target_properties(${NAME} PROPERTIES 
+            VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
+  endif()
 endfunction()
 
 meta_exe(generate_cache dragonbox::common)
