--- a/subproject/3rdparty/schubfach/CMakeLists.txt
+++ b/subproject/3rdparty/schubfach/CMakeLists.txt
@@ -2,20 +2,12 @@ cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 
 project(schubfach LANGUAGES CXX)
 
-add_library(schubfach_32 STATIC schubfach_32.cc schubfach_32.h)
-add_library(schubfach::schubfach_32 ALIAS schubfach_32)
+add_library(schubfach STATIC
+        schubfach_32.cc schubfach_32.h schubfach_64.cc schubfach_64.h)
+add_library(schubfach::schubfach ALIAS schubfach)
 
-target_compile_features(schubfach_32 PUBLIC cxx_std_17)
+target_compile_features(schubfach PUBLIC cxx_std_17)
 
-target_include_directories(schubfach_32
-        PUBLIC
-        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
-
-add_library(schubfach_64 STATIC schubfach_64.cc schubfach_64.h)
-add_library(schubfach::schubfach_64 ALIAS schubfach_64)
-
-target_compile_features(schubfach_64 PUBLIC cxx_std_17)
-
-target_include_directories(schubfach_64
+target_include_directories(schubfach
         PUBLIC
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
