Add dragonbox::common as a dependency to sandbox

--- a/subproject/meta/CMakeLists.txt
+++ b/subproject/meta/CMakeLists.txt
@@ -39,4 +39,4 @@ meta_exe(generate_cache dragonbox::common)
 meta_exe(generate_compressed_cache_error_table dragonbox::dragonbox)
 meta_exe(live_test dragonbox::dragonbox_to_chars)
 meta_exe(perf_test dragonbox::common dragonbox::dragonbox_to_chars)
-meta_exe(sandbox dragonbox::dragonbox_to_chars)
+meta_exe(sandbox dragonbox::dragonbox_to_chars dragonbox::common)
