Add constexpr smoke tests, fix uninitialized value in constexpr

--- a/subproject/test/CMakeLists.txt
+++ b/subproject/test/CMakeLists.txt
@@ -68,3 +68,8 @@ add_test(verify_compressed_cache)
 add_test(verify_fast_multiplication)
 add_test(verify_log_computation)
 add_test(verify_magic_division)
+add_test(constexpr)
+set_target_properties(constexpr PROPERTIES
+  CXX_STANDARD 20
+  CXX_STANDARD_REQUIRED ON
+)
