Add Ryu to meta as a dependency

--- a/subproject/meta/CMakeLists.txt
+++ b/subproject/meta/CMakeLists.txt
@@ -11,6 +11,10 @@ if (NOT TARGET common)
     FetchContent_Declare(common SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../common")
     FetchContent_MakeAvailable(common)
 endif()
+if (NOT TARGET ryu)
+    FetchContent_Declare(ryu SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../3rdparty/ryu")
+    FetchContent_MakeAvailable(ryu)
+endif()
 
 function(meta_exe NAME)
   add_executable(${NAME} source/${NAME}.cpp)
