Remove MSVC specifics
- PDB generation should be at the user's will. The library should not touch it. LTO as well.
- Lambda bug workaround is no longer needed.

--- a/subproject/meta/CMakeLists.txt
+++ b/subproject/meta/CMakeLists.txt
@@ -25,15 +25,7 @@ function(meta_exe NAME)
 
   # ---- MSVC Specifics ----
   if (MSVC)
-      # No need to not generate PDB
-      # /permissive- should be the default
-      # The compilation will fail without /experimental:newLambdaProcessor
-      # See also https://gitlab.kitware.com/cmake/cmake/-/issues/16478
-      target_compile_options(${NAME} PUBLIC
-              /Zi /permissive-
-              $<$<NOT:$<CXX_COMPILER_ID:Clang>>:/experimental:newLambdaProcessor>
-              $<$<CONFIG:Release>:/GL>)
-      target_link_options(${NAME} PUBLIC /LTCG /DEBUG:FASTLINK)
+      # See https://gitlab.kitware.com/cmake/cmake/-/issues/16478
       set_target_properties(${NAME} PROPERTIES 
             VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
   endif()
