--- a/subproject/benchmark/CMakeLists.txt
+++ b/subproject/benchmark/CMakeLists.txt
@@ -51,15 +51,7 @@ target_link_libraries(benchmark
 
 # ---- MSVC Specifics ----
 if (MSVC)
-    # No need to not generate PDB
-    # /permissive- should be the default
-    # The compilation will fail without /experimental:newLambdaProcessor
-    # See also https://gitlab.kitware.com/cmake/cmake/-/issues/16478
-    target_compile_options(benchmark PUBLIC
-              /Zi /permissive-
-              $<$<NOT:$<CXX_COMPILER_ID:Clang>>:/experimental:newLambdaProcessor>
-              $<$<CONFIG:Release>:/GL>)
-    target_link_options(benchmark PUBLIC /LTCG /DEBUG:FASTLINK)
+    # See https://gitlab.kitware.com/cmake/cmake/-/issues/16478
     set_target_properties(benchmark PROPERTIES 
             VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
 endif()
